@@ -16,10 +16,6 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
   ok(TestCase::Lib::SPVM::Hash->test_set_get_numeric);
   ok(TestCase::Lib::SPVM::Hash->test_murmur_hash);
   ok(TestCase::Lib::SPVM::Hash->test_new_capacity);
-  ok(TestCase::Lib::SPVM::Hash->test_newa);
-  ok(TestCase::Lib::SPVM::Hash->test_newa_allocated_capacity_should_power_of_2);
-  ok(TestCase::Lib::SPVM::Hash->test_newa_die_when_odd_number_array);
-  ok(TestCase::Lib::SPVM::Hash->test_newa_do_not_refer_caller_key);
   ok(TestCase::Lib::SPVM::Hash->test_set);
   ok(TestCase::Lib::SPVM::Hash->test_set_do_not_refer_caller_key);
   ok(TestCase::Lib::SPVM::Hash->test_get);
