@@ -120,64 +120,6 @@ package TestCase::Lib::SPVM::Hash {
     return 1;
   }
 
-  sub test_newa : int () {
-    my $hash = SPVM::Hash->newa([(object)"a","1","b",SPVM::Int->new(2)]);
-    unless ($hash->_bucket_count == 2) {
-      return 0;
-    }
-    unless ($hash->count == 2) {
-      return 0;
-    }
-    unless (@{$hash->_entries} == 2) {
-      return 0;
-    }
-    unless ((string)($hash->get("a")) eq "1") {
-      return 0;
-    }
-    unless (((SPVM::Int)($hash->get("b")))->val == 2) {
-      return 0;
-    }
-    return 1;
-  }
-
-  sub test_newa_allocated_capacity_should_power_of_2 : int () {
-    my $hash = SPVM::Hash->newa([(object)"a","1","b","2","c","3"]);
-    unless ($hash->_bucket_count == 4) {
-      return 0;
-    }
-    unless ($hash->count == 3) {
-      return 0;
-    }
-    unless (@{$hash->_entries} == 4) {
-      return 0;
-    }
-    return 1;
-  }
-
-  sub test_newa_die_when_odd_number_array : int () {
-    eval {
-      SPVM::Hash->newa([(object)"a", "1", "b"]);
-    };
-    unless ($@) {
-      return 0;
-    }
-    $@ = undef;
-    return 1;
-  }
-
-  sub test_newa_do_not_refer_caller_key : int () {
-    my $data = [(object)"a","1"];
-    my $hash = SPVM::Hash->newa($data);
-    $data->[0] = "b";
-    unless ($hash->exists("a")) {
-      return 0;
-    }
-    unless ($hash->exists("b") == 0) {
-      return 0;
-    }
-    return 1;
-  }
-
   sub test_set : int () {
     my $keys = ["alice", "bob", "carol", "1234567890-="];
     my $vals = [SPVM::Int->new(1), SPVM::Int->new(2), undef, SPVM::Int->new(3)];
@@ -211,7 +153,11 @@ package TestCase::Lib::SPVM::Hash {
   }
 
   sub test_get : int () {
-    my $hash = SPVM::Hash->newa([(object) "a", SPVM::Int->new(1), "b", undef, "c", "str"]);
+    my $hash = SPVM::Hash->new;
+    $hash->set_int("a" => 1);
+    $hash->set("b" => undef);
+    $hash->set("c" => "str");
+    
     unless (((SPVM::Int)($hash->get("a")))->val == 1) {
       return 0;
     }
